--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,10 @@
 .App-intro {
   font-size: large;
 }
+.fotoLogin {
+  width: 100px;
+  border-radius: 100%;
+}
 
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
