--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,41 @@
+@font-face {
+  font-family: "Lane";
+  src: url("LANENAR.ttf");
+}
+body{
+	font-family: 'Lane', sans-serif;
+  width: 100%;
+}
+button{
+	font-family: 'Lane', sans-serif;
+  font-size: 110%;
+  border-radius: 15%;
+  border: 0;
+  padding: 3px 5px;
+}
 .App {
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
 .App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+  background-image: url(http://img.freepik.com/psd-gratis/fondo-de-madera-realista_1022-69.jpg?size=338c&ext=jpg);
+  height: 70px;
+  padding: 10px;
   color: white;
-}
-
-.App-intro {
-  font-size: large;
 }
 .fotoLogin {
   width: 100px;
   border-radius: 100%;
 }
-
+.fotoUser {
+  width: 50px;
+  border-radius: 100%;
+}
+.fotoCargada{
+  width: 300px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
